# SlicerOvseg

./: CMakeLists.txt  README.md
Ovseg/: CMakeLists.txt  Ovseg.py
